# opentab

./: .gitignore  LICENSE  Makefile  README.md  __main__.py  opentab  opentb  result.yml  setup.cfg  setup.cfg.j2  setup.py
.github/workflows/: python-publish.yaml
command/: open_tabs.py
opentab/: opentab.py
opentab/command/: add.py  add_tab.py  init_opentab.py  list.py  list_group_tabs.py  list_groups.py  list_tree.py  open.py  open_tabs.py  remove.py  remove_group.py  remove_tabs.py  reset_opentab.py  start.py
opentab/parsing/: parse_cli_args.py
opentab/utility/: get_group_urls.py  get_right_urls.py
opentab/yaml/: read_yaml.py  write_yaml.py
src/: __main__.py  opentab.py  write_group.py
src/command/: add_tab.py  init_opentab.py  list_group.py  list_group_tabs.py  list_groups.py  list_tree.py  open_tabs.py  remove_group.py  remove_tabs.py  reset_opentab.py
src/devel/: init_devel.py
src/exception/: GroupExists.py
src/parsing/: parse_cli_args.py
src/utility/: constants.py  get_group_urls.py  get_right_urls.py  is_url_correct.py
src/yaml/: read_yaml.py  write_yaml.py
utilityV2/: get_group_urls.py
yaml_utility/: read_yaml.py
