[metadata]
name = opentab
version = 0.0.3
author = Opentab team
author_email =
description = Opentab groups browser tabs and let you open it whenever needed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/endriu00/opentab
project_urls =
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =./
packages = find:

install_requires =
    colorama
    ruamel.yaml
    argparse

python_requires = >=3.6

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    opentab = opentab.opentab:opentab
